--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nabu.data</groupId>
 	<artifactId>mime</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>${nabu.data-mime-version}</version>
 	<name>mime</name>
 	
 	<parent>
@@ -13,4 +13,11 @@
 		<artifactId>modules</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
+	
+	<dependencies>
+		<dependency>
+			<groupId>nabu.misc</groupId>
+			<artifactId>keystore</artifactId>
+		</dependency>
+	</dependencies>
 </project>
